--- a/Dashboard/assets/visual_styles.css
+++ b/Dashboard/assets/visual_styles.css
@@ -99,18 +99,18 @@
     text-align: center;
     font-size:20px;
     font-weight: 600;
+    margin-top: -110;
     margin-left: 15px;
     padding: 10px 20px 10px 20px;
     border-radius: 2%;
     background-color: rgb(90, 190, 230);
 }
-
+/*Гистограмма*/
 .hist{
     display: block;
     box-sizing: border-box;
     width: 1270px;
     height: 470px;
-    border: 1px solid rgb(0, 0, 0);
     border-radius: 0.2%;
 }
 
