--- a/Dashboard/assets/visual_styles.css
+++ b/Dashboard/assets/visual_styles.css
@@ -30,33 +30,33 @@ body {
   padding-bottom: 10px;
   border: 1px solid rgb(0, 0, 0);
   background-color: rgb(210, 240, 245);
-  width: 250px; /* Установите фиксированную ширину для карточек */
-  height: 150px; /* Установите фиксированную высоту для карточек*/
+  width: 250px;
+  height: 150px;
 }
 
 /* Стопка карточек */
 .cards_stack {
   display: flex;
   flex-direction: column;
-  height: 80vh;
-  width: 300px; /* Установите фиксированную ширину для стопки карточек */
-  min-width: 100px; /* Установите минимальную ширину для предотвращения сжатия */
-  flex-shrink: 0; /* Не позволяйте стопке карточек сжиматься */
+  height: 900px;
+  width: 300px;
+  min-width: 100px;
+  flex-shrink: 0;
 }
 /* Сайтбар */
 .sidebar {
   margin: 15px;
-  width: 300px; /* Установите фиксированную ширину для сайтбара */
-  max-height: 82vh;
-  display: flex; /* Используйте flex для управления внутренними элементами */
-  flex-direction: column; /* Расположите элементы в колонку */
-  overflow: auto; /* Позволяет прокрутку, если содержимое превышает высоту */
+  width: 300px;
+  height: 900px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
   padding: 8px 8px 8px 30px;
   border-radius: 1.5%;
   border: 1px solid rgb(0, 0, 0);
   background-color: rgb(90, 190, 230);
-  flex-shrink: 0; /* Не позволяйте сайтбару сжиматься */
-  box-sizing: border-box; /* Учитывайте паддинги и границы в общей ширине и высоте */
+  flex-shrink: 0;
+  box-sizing: border-box;
 }
 
 /* Текст сайтбара */
@@ -87,6 +87,8 @@ body {
   font-weight: 600;
   display: block;
   font-family: "Arial";
+  width: 1900px;
+  height: 100px;
   text-align: center;
   color: black;
 }
@@ -119,16 +121,16 @@ body {
 
 /* Пространства для прокрутки */
 .color {
-  width: 100%; /* Во всю ширину страницы */
-  height: 10vh; /* Высота 10% от высоты окна браузера */
+  width: 100%;
+  height: 10vh;
 }
 
 /*Гистограмма*/
 .hist {
   display: block;
   box-sizing: border-box;
-  width: 1270px;
-  height: 470px;
+  width: 1400px;
+  height: 600px;
   border-radius: 0.2%;
 }
 
